replace field injection with constructors and remove redundant methods and param constructors in entity classes